# ucount

./: .gitignore  CLAUDE.md  Dockerfile  README.md  dev.sh  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
backend/: algorithm.py  audit.py  groups.py  limiter.py  main.py  spendings.py  store.py  test_algorithm.py  test_api.py  test_audit.py  test_groups.py  test_i18n.py  test_limiter.py  test_main.py  test_spendings.py  test_store.py  tmpl.py  translations.py
frontend/static/: group.js  index.js  style.css
frontend/templates/: base.html  group.html  index.html  my_groups.html
i18n/: en.json  fr.json
